--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Center it */
+    transform: translate(-50%, -50%); 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 15px;
     border-radius: 8px;
-    z-index: 1000; /* Ensure it appears above other elements */
+    z-index: 1000; 
     color: white;
 }
 
@@ -236,6 +236,57 @@
 
         .secfooter .alternate {
             font-family: 'alternateFont', sans-serif;
+        }
+
+        @media (max-width: 768px) {
+            .main {
+                font-size: 1.5rem;
+            }
+
+            .audwin {
+                padding: 10px;
+            }
+
+            .footer {
+                font-size: 1.2rem;
+            }
+
+            .secfooter {
+                font-size: 4rem;
+            }
+
+            .footer2 {
+                font-size: 1rem;
+            }
+
+            .pinned-image {
+                width: 80px;
+                height: 80px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .main {
+                font-size: 1.2rem;
+            }
+
+            .audwin {
+                padding: 5px;
+            }
+
+            .footer,
+            .footer2 {
+                font-size: 1rem;
+            }
+
+            .secfooter {
+                font-size: 2.5rem;
+            }
+
+            .pinned-image {
+                width: 60px;
+                height: 60px;
+            }
         }
     </style>
 </head>
