--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>feng.digital</title>
     <link rel="icon" type="image/x-icon" href="New Project (1).png">
     <link rel="stylesheet" href="crt.css">
-    <meta property="og:image" content="New Project (1).png">
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+    <meta property="og:image" content="pfps/wtfeng.png">
+    <meta property="og:title" content="what the feng?" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -99,7 +100,7 @@
     justify-content: center;
     padding: 15px;
     border-radius: 8px;
-    z-index: 1000; 
+    z-index: 1000;
     color: white;
 }
 
@@ -257,6 +258,7 @@
 
             .footer2 {
                 font-size: 1rem;
+                bottom: 20%;
             }
 
             .pinned-image {
@@ -274,10 +276,14 @@
                 padding: 5px;
             }
 
-            .footer,
-            .footer2 {
+            .footer {
                 font-size: 1rem;
             }
+            .footer2 {
+                font-size: 1rem;
+                bottom: 20%;
+            }
+            
 
             .secfooter {
                 font-size: 2.5rem;
