--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="New Project (1).png">
     <link rel="stylesheet" href="crt.css">
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
-    <meta property="og:image" content="pfps/wtfeng.png">
+    <meta property="og:image" content="https://feng.digital/pfps/wtfeng.png">
     <meta property="og:title" content="what the feng?" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
