--- a/index.html
+++ b/index.html
@@ -362,6 +362,18 @@
 
 
         @media (max-width: 768px) {
+            .secfooter {
+                font-size: 4rem;
+            }
+
+            .footer {
+                font-size: 1.2rem;
+            }
+
+            .footer2 {
+                font-size: 1.2rem;
+            }
+
             .page-container {
                 width: 90vw;
                 height: 80vh;
@@ -378,6 +390,18 @@
         }
 
         @media (max-width: 480px) {
+            .secfooter {
+                font-size: 3rem;
+            }
+
+            .footer {
+                font-size: 1rem;
+            }
+
+            .footer2 {
+                font-size: 1rem;
+            }
+
             .page-container {
                 width: 95vw;
                 height: 85vh;
