--- a/index.html
+++ b/index.html
@@ -362,21 +362,9 @@
 
 
         @media (max-width: 768px) {
-            .secfooter {
-                font-size: 4rem;
-            }
-
-            .footer {
-                font-size: 1.2rem;
-            }
-
-            .footer2 {
-                font-size: 1.2rem;
-            }
-
             .page-container {
                 width: 90vw;
-                height: 80vh;
+                height: 70vh;
             }
 
             .credit-card {
@@ -387,24 +375,30 @@
                 width: 80px;
                 height: 80px;
             }
+
+            .pinboard {
+                padding-top: 20px;
+            }
+
+            .pinned-image {
+                width: 80px;
+                height: 80px;
+            }
+
+            .page-navigation button {
+                font-size: 0.8rem;
+                padding: 10px 20px;
+            }
+
+            .footer, .footer2, .secfooter {
+                font-size: 1.5rem;
+            }
         }
 
         @media (max-width: 480px) {
-            .secfooter {
-                font-size: 3rem;
-            }
-
-            .footer {
-                font-size: 1rem;
-            }
-
-            .footer2 {
-                font-size: 1rem;
-            }
-
             .page-container {
                 width: 95vw;
-                height: 85vh;
+                height: 80vh;
             }
 
             .credit-card {
@@ -414,6 +408,20 @@
             .credit-card img {
                 width: 60px;
                 height: 60px;
+            }
+
+            .pinned-image {
+                width: 70px;
+                height: 70px;
+            }
+
+            .page-navigation button {
+                font-size: 0.75rem;
+                padding: 8px 16px;
+            }
+
+            .footer, .footer2, .secfooter {
+                font-size: 1.2rem;
             }
         }
     </style>
