--- a/index.html
+++ b/index.html
@@ -377,12 +377,13 @@
             }
 
             .pinboard {
-                padding-top: 20px;
+                padding-top: 10px;
             }
 
             .pinned-image {
-                width: 80px;
-                height: 80px;
+                width: 100px;
+                height: 100px;
+                margin: 10px;
             }
 
             .page-navigation button {
@@ -411,8 +412,8 @@
             }
 
             .pinned-image {
-                width: 70px;
-                height: 70px;
+                width: 80px;
+                height: 80px;
             }
 
             .page-navigation button {
