--- a/index.html
+++ b/index.html
@@ -363,17 +363,12 @@
 
         @media (max-width: 768px) {
             .page-container {
-                width: 50vw;
+                width: 75vw;
                 height: 30vh;
             }
 
-            .credit-card {
-                width: 150px;
-            }
-
-            .credit-card img {
-                width: 80px;
-                height: 80px;
+            .page-navigation button {
+                margin-top: auto;
             }
 
             .pinboard {
@@ -398,8 +393,8 @@
 
         @media (max-width: 480px) {
             .page-container {
-                width: 95vw;
-                height: 80vh;
+                width: 80vw; 
+                height: 35vh;
             }
 
             .credit-card {
