--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 
         @media (max-width: 768px) {
             .page-container {
-                width: 75vw;
-                height: 30vh;
+                width: 75vw; /* Further reduced width */
+                height: 30vh; /* Further reduced height */
             }
 
             .page-navigation button {
-                margin-top: auto;
+                margin-top: auto; /* Positioned at the bottom */
             }
 
             .pinboard {
@@ -377,7 +377,7 @@
 
             .pinned-image {
                 width: 100px;
-                height: 100px;
+                height: 100px; 
                 margin: 10px;
             }
 
@@ -388,6 +388,10 @@
 
             .footer, .footer2, .secfooter {
                 font-size: 1.5rem;
+            }
+
+            .footer2 {
+                bottom: 5%;
             }
         }
 
@@ -407,7 +411,7 @@
             }
 
             .pinned-image {
-                width: 80px;
+                width: 80px; 
                 height: 80px;
             }
 
@@ -418,6 +422,10 @@
 
             .footer, .footer2, .secfooter {
                 font-size: 1.2rem;
+            }
+
+            .footer2 {
+                bottom: 3%;
             }
         }
     </style>
