--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 
         @media (max-width: 768px) {
             .page-container {
-                width: 75vw; /* Further reduced width */
-                height: 30vh; /* Further reduced height */
+                width: 75vw;
+                height: 30vh; 
             }
 
             .page-navigation button {
-                margin-top: auto; /* Positioned at the bottom */
+                margin-top: auto; 
             }
 
             .pinboard {
@@ -376,8 +376,8 @@
             }
 
             .pinned-image {
-                width: 100px;
-                height: 100px; 
+                width: 70px;
+                height: 70px; 
                 margin: 10px;
             }
 
@@ -391,7 +391,7 @@
             }
 
             .footer2 {
-                bottom: 5%;
+                bottom: 30%;
             }
         }
 
@@ -411,8 +411,8 @@
             }
 
             .pinned-image {
-                width: 80px; 
-                height: 80px;
+                width: 40px; 
+                height: 40px;
             }
 
             .page-navigation button {
