--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
             .page-navigation button {
                 font-size: 0.8rem;
                 padding: 10px 20px;
+                 margin-bottom: 120px;
             }
 
             .footer, .footer2, .secfooter {
@@ -391,7 +392,7 @@
             }
 
             .footer2 {
-                bottom: 30%;
+                bottom: -40%;
             }
         }
 
@@ -418,6 +419,7 @@
             .page-navigation button {
                 font-size: 0.75rem;
                 padding: 8px 16px;
+                margin-bottom: 100px;
             }
 
             .footer, .footer2, .secfooter {
@@ -425,7 +427,7 @@
             }
 
             .footer2 {
-                bottom: 3%;
+                bottom: -30%;
             }
         }
     </style>
