--- a/index.html
+++ b/index.html
@@ -362,74 +362,65 @@
 
 
         @media (max-width: 768px) {
-            .page-container {
-                width: 75vw;
-                height: 30vh; 
-            }
+   
+    .page-navigation button {
+        margin-top: 20px;
+    }
 
-            .page-navigation button {
-                margin-top: auto; 
-            }
+    .footer2 {
+        position: absolute;
+        bottom: 150px; 
+        width: 100%;
+        font-size: 1.5rem;
+        text-align: center;
+        color: #fff;
+        padding: 10px;
+        opacity: 0.8;
+        z-index: 500;
+        white-space: normal;
+    }
 
-            .pinboard {
-                padding-top: 10px;
-            }
+    .pinboard {
+        padding-top: 40px;
+    }
 
-            .pinned-image {
-                width: 70px;
-                height: 70px; 
-                margin: 10px;
-            }
+    .pinned-image {
+        width: 90px; 
+        height: 90px;
+    }
 
-            .page-navigation button {
-                font-size: 0.8rem;
-                padding: 10px 20px;
-                 margin-bottom: 120px;
-            }
+    .page-navigation button {
+        font-size: 0.85rem;
+        padding: 10px 20px;
+        margin-bottom: 80px; 
+    }
 
-            .footer, .footer2, .secfooter {
-                font-size: 1.5rem;
-            }
+    .footer {
+        font-size: 1.5rem;
+        bottom: 80px; 
+    }
 
-            .footer2 {
-                bottom: -40%;
-            }
+    @media (max-width: 480px) {
+        .footer, .footer2 {
+            font-size: 1.2rem;
         }
 
-        @media (max-width: 480px) {
-            .page-container {
-                width: 80vw; 
-                height: 35vh;
-            }
-
-            .credit-card {
-                width: 120px;
-            }
-
-            .credit-card img {
-                width: 60px;
-                height: 60px;
-            }
-
-            .pinned-image {
-                width: 40px; 
-                height: 40px;
-            }
-
-            .page-navigation button {
-                font-size: 0.75rem;
-                padding: 8px 16px;
-                margin-bottom: 100px;
-            }
-
-            .footer, .footer2, .secfooter {
-                font-size: 1.2rem;
-            }
-
-            .footer2 {
-                bottom: -30%;
-            }
+        .footer2 {
+            bottom: 100px;
         }
+
+        .pinned-image {
+            width: 50px;
+            height: 50px;
+        }
+
+        .page-navigation button {
+            font-size: 0.75rem;
+            padding: 8px 16px;
+            margin-bottom: 60px; 
+        }
+    }
+}
     </style>
 </head>
 
