--- a/index.html
+++ b/index.html
@@ -377,8 +377,10 @@
         white-space: normal;
     }
 
+            
 
-    .title {
+
+    .secfooter {
         font-size: 2rem; 
     }
 
@@ -402,7 +404,7 @@
   
     .footer2 {
         position: absolute;
-        bottom: 250px; 
+        bottom: 320px; 
         width: 100%;
         font-size: 1.5rem;
         text-align: center;
@@ -420,11 +422,11 @@
     }
 
     .footer2 {
-        bottom: 100px; /* Lower footer2 for smaller screens */
+        bottom: 300px; 
     }
 
     .pinned-image {
-        width: 50px; /* Smaller album images for mobile */
+        width: 50px; 
         height: 50px;
     }
 
