--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
     }
 
     .pinned-image {
-        width: 90px; 
-        height: 90px;
+        width: 80px; 
+        height: 80px;
     }
 
 
@@ -404,7 +404,7 @@
   
     .footer2 {
         position: absolute;
-        bottom: 260px; 
+        bottom: 200px; 
         width: 100%;
         font-size: 1.5rem;
         text-align: center;
@@ -422,18 +422,18 @@
     }
 
     .footer2 {
-        bottom: 300px; 
+        bottom: 150px; 
     }
 
     .pinned-image {
-        width: 50px; 
-        height: 50px;
+        width: 70px; 
+        height: 70px;
     }
 
     .page-navigation button {
         font-size: 0.75rem;
         padding: 8px 16px;
-        margin-bottom: 40px; /* Further adjust margin for small screens */
+        margin-bottom: 40px; 
     }
 }
     </style>
