--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             position: relative;
             overflow: hidden;
             background: #000;
+            height: auto;
+            overflow-y: scroll;
         }
 
         .noise,
